src/style.css
/* ... */
.harvey {
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
    align-self: auto;
}

.nose {
    -webkit-animation: twitch 1s infinite;
    animation: twitch 1s infinite;
}

.harvey:hover * .eyebrow,
.harvey:focus * .eyebrow {
    -webkit-animation: raise 2s 1;
    animation: raise 2s 1;
}

.harvey:hover * .mouth,
.harvey:focus * .mouth {
    -webkit-animation: skew 2s 1;
    animation: skew 2s 1;
}

.right-ear {
    -webkit-transition: all 1s ease;
    transition: all 1s ease;
}

.right-ear:hover {
    -webkit-transition: all 2s ease;
    transition: all 2s ease;
    -webkit-transform: rotateZ(3deg);
    transform: rotateZ(3deg);
}

.left-ear {
    -webkit-transition: all 1s ease;
    transition: all 1s ease;
}

.left-ear:hover {
    -webkit-transition: all 2s ease;
    transition: all 2s ease;
    -webkit-transform: rotateZ(-5deg);
    transform: rotateZ(-5deg);
}

@-webkit-keyframes twitch {
    0%,
    100% {
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }

    35% {
        -webkit-transform: translateY(-1px);
        transform: translateY(-1px);
    }

    50% {
        -webkit-transform: translateY(0px);
        transform: translateY(0px);
    }

    75% {
        -webkit-transform: translateY(-2px);
        transform: translateY(-2px);
    }

}

@keyframes twitch {
    0%,
    100% {
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }

    35% {
        -webkit-transform: translateY(-1px);
        transform: translateY(-1px);
    }

    50% {
        -webkit-transform: translateY(0px);
        transform: translateY(0px);
    }

    75% {
        -webkit-transform: translateY(-2px);
        transform: translateY(-2px);
    }

}

@-webkit-keyframes left-rotate {
    0%,
    100% {
        -webkit-transform: rotateZ(0);
        transform: rotateZ(0);
    }

    35% {
        -webkit-transform: rotateZ(-4deg);
        transform: rotateZ(-4deg);
    }

}

@keyframes left-rotate {
    0%,
    100% {
        -webkit-transform: rotateZ(0);
        transform: rotateZ(0);
    }

    35% {
        -webkit-transform: rotateZ(-4deg);
        transform: rotateZ(-4deg);
    }

}

@-webkit-keyframes right-rotate {
    0%,
    100% {
        -webkit-transform: rotateZ(0);
        transform: rotateZ(0);
    }

    50% {
        -webkit-transform: rotateZ(1deg);
        transform: rotateZ(1deg);
    }

}

@keyframes right-rotate {
    0%,
    100% {
        -webkit-transform: rotateZ(0);
        transform: rotateZ(0);
    }

    50% {
        -webkit-transform: rotateZ(1deg);
        transform: rotateZ(1deg);
    }

}

@-webkit-keyframes raise {
    0%,
    100% {
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }

    50% {
        -webkit-transform: translateY(-5px);
        transform: translateY(-5px);
    }

}

@keyframes raise {
    0%,
    100% {
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }

    50% {
        -webkit-transform: translateY(-5px);
        transform: translateY(-5px);
    }

}

.cilantro {
    position: relative;
    z-index: -1;
    top: -100px;
    -webkit-transition: opacity 1s ease;
    transition: opacity 1s ease;
    -webkit-transform: rotateZ(-15deg);
    transform: rotateZ(-15deg);
    text-align: center;
    opacity: 0;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
    align-self: auto;
}


.frame {
    height: 5em;
}

.arrow {
    height: 4em;
    opacity: 0;
    transition: opacity 2s ease;
}

.in-view > .arrow {
    opacity: 1;
}

.arrow-left,
.arrow-right {
    transition: transform 4s ease;
}

.in-view > .arrow-left {
    transform:  translate(-3em, 6.25em);
}

.in-view > .arrow-right {
    transform: translate(3em, -6.25em);
}


.in-view > .arrow-middle {
    transform: translateY(0);
}



@-webkit-keyframes connect {
    100% {
        transform: translateX(1em);
    }
}

@-webkit-keyframes skew {
    0%,
    100% {
        -webkit-transform: skew(0);
        transform: skew(0);
    }

    50% {
        -webkit-transform: skew(1.5deg, -1.5deg);
        transform: skew(2deg, -1.5deg);
    }

}

.intro {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    flex-direction: column;
    width: 100vw;
    height: 100vh;
    text-align: center;
    background-image: url('omaha.jpeg');
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: center;
}

.ballon {
    height: 100vh;
    opacity: .7;
    background-image: url(boop.jpeg);
    background-position: bottom;
    background-size: cover;
}

.hi {
    color: white;
}

.next {
    display: block;
    transform: translateZ(0);
    text-align: center;
    color: white;
    webkit-overflow-scrolling: touch;
    scroll-behavior: smooth;
}

.next:hover {
    color: white;
}

.next:after {
    position: absolute;
    bottom: -12px;
    left: 50%;
    width: 0;
    height: 0;
    margin-left: -12px;
    content: '';
    transition: all 1500ms ease;
    border-top: 12px solid #8ba4be;
    border-right: 12px solid transparent;
    border-left: 12px solid transparent;
}

.next:hover:after {
    margin-top: 1em;
    border-top: 12px solid white;
}

.next:focus:after {
    transform: translateY(15em);
    opacity: 0;
}

.column {
    padding-top: 2em;
    cursor: pointer;
    transition: padding 3600ms, opacity 1000ms, color 3600ms;
    opacity: .2;
    box-shadow: 0 3px 0 #3f5771;
    flex-basis: 30%;
}

.column:hover {
    padding-top: 0;
    opacity: 1;
    box-shadow: 0 3px 0 #8ba4be;
}
/* ... */

